# laibrary

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml  run_remotely.sh  setup.sh
data/summaries/: ai-simulation-assistants.md  matterstack-startup-ellad-stefano-kurt.md
docs/: api.md  index.md
open-webui-functions/: laibrary_pipe.py
src/laibrary/: __init__.py  agents.py  chat.py  cli.py  commands.py  config.py  data_models.py  document_parser.py  exceptions.py  git_wrapper.py  graph_models.py  ingestion.py  main.py  projects.py  prompts.py  queue_manager.py  retrieval.py  schemas.py  session_manager.py  summarization.py  versioning.py  workflow.py
src/laibrary/bulk_import/: __init__.py  parser.py  processor.py
src/laibrary/chat/: __init__.py  intent.py  models.py  runner.py  session.py
src/laibrary/nodes/: __init__.py  architect.py  committer.py  confirmation.py  context.py  ingestion.py  planner.py  selector.py  summaries.py
src/laibrary/web/: __init__.py  server.py
src/laibrary/web/static/: app.js  index.html  manifest.json  style.css  sw.js
tests/: __init__.py  test_example.py
